finished CSS, completed responsive desgin with 3 breaking points, and added README file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
 <body>
     <div class="grid">
         <div class="top-cell">
-            <section>motion background</section>
+            <section id="left-text">
+                <h1>Hit the Buzzer and Win a Cookie!</h1>
+                <p>Welcome, to the Cookie Kingdom! There are three objectives to the game:<br>1. Click "Win Cookie" button to get a cookie<br>2. Click "Satisfaction button to EAT earned cookies<br>3. Eat enough cookies to increase satisfaction level and WIN!</p>
+            </section>
+            <div class="image-container">
+                <img src="https://content.wfmynews2.com/photo/2016/11/01/Cookie%20Monster%20USAT_1478046170218_6692962_ver1.0.JPG"/>
+            </div>
+            <section id="right-text"></section>
         </div>
         <div class="middle-cell">
             <div class="middle-container">
@@ -19,6 +26,7 @@
             <div class="left-container">
                 <input id="satisfaction-bar"  type="text" placeholder="Satisfaction Level" readonly>
             </div>
+            <div class="right-container"></div>
         </div>
         <div class="bottom-cell">
             <div class="satisfaction-container">
@@ -27,6 +35,7 @@
             <div class="win-cookie-container">
                 <button id="win-cookie-btn">Win Cookie</button>
             </div>
+            <div class="bottom-right-container"></div>
         </div>
     </div>
 </body>
