--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <p>Welcome, to the Cookie Kingdom! There are three objectives to the game:<br>1. Click "Win Cookie" button to get a cookie<br>2. Click "Satisfaction button to EAT earned cookies<br>3. Eat enough cookies to increase satisfaction level and WIN!</p>
             </section>
             <div class="image-container">
-                <img src="https://content.wfmynews2.com/photo/2016/11/01/Cookie%20Monster%20USAT_1478046170218_6692962_ver1.0.JPG"/>
+                <img src="https://content.wfmynews2.com/photo/2016/11/01/Cookie%20Monster%20USAT_1478046170218_6692962_ver1.0.JPG" alt="Cookie Monster"/>
             </div>
             <section id="right-text"></section>
         </div>
