completed basic functionality of entire game flow save for winning condition function

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="top-cell">
             <section id="left-text">
                 <h1>Hit the Buzzer and Win a Cookie!</h1>
-                <p>Welcome, to the Cookie Kingdom! There are three objectives to the game:<br>1. Click "Win Cookie" button to get a cookie<br>2. Click "Satisfaction button to EAT earned cookies<br>3. Eat enough cookies to increase satisfaction level and WIN!</p>
+                <p>Welcome, to the Cookie Kingdom! There are three objectives to the game:<br>1. Click "Win Cookie" button to get a cookie<br>2. Click "Eat Cookie" button to EAT earned cookies<br>3. Eat enough cookies to increase satisfaction level and WIN!</p>
             </section>
             <div class="image-container">
                 <img src="https://content.wfmynews2.com/photo/2016/11/01/Cookie%20Monster%20USAT_1478046170218_6692962_ver1.0.JPG" alt="Cookie Monster"/>
@@ -30,7 +30,7 @@
         </div>
         <div class="bottom-cell">
             <div class="satisfaction-container">
-                <button id="satisfaction-btn">Satisfaction Button</button>
+                <button id="satisfaction-btn">Eat Cookie</button>
             </div>
             <div class="win-cookie-container">
                 <button id="win-cookie-btn">Win Cookie</button>
