completed entire game flow from start to finish and reset functionality to start game again

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <img src="https://content.wfmynews2.com/photo/2016/11/01/Cookie%20Monster%20USAT_1478046170218_6692962_ver1.0.JPG" alt="Cookie Monster"/>
             </div>
             <section id="right-text">
-                
+                <!-- Reset Button -->
             </section>
         </div>
         <div class="middle-cell">
