added feature to play against computer and display tie,won,lost message with difference in points

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="top-cell">
             <section id="left-text">
                 <h1>Hit the Buzzer and Win a Cookie!</h1>
-                <p>Welcome, to the Cookie Kingdom! These are the following objectives to the game:<br>1. Click "Win Cookie" button to get a cookie<br>2. Hover over "Eat Cookie" button to EAT earned cookies<br>3. Each cookie is assigned a flavor and shape, with corresponding point values - so good luck generating cookies worth a lot of points<br>4. Eat enough cookies to increase satisfaction level from "Keep Eating" to "Stop Eating" because you can only win 21 cookies<br>5. Try to get the highest score possible before your last cookie - Don't forget to eat cookie after every cookie you earn!</p>
+                <p>Welcome, to the Cookie Kingdom! These are the following objectives to the game:<br>1. Click "Win Cookie" button to get a cookie<br>2. Hover over "Eat Cookie" button to EAT earned cookies<br>3. Each cookie is assigned a flavor and shape, with corresponding point values - so good luck generating cookies worth a lot of points<br>4. Eat enough cookies to increase satisfaction level from "Keep Eating" to "Stop Eating" because you can only win 21 cookies<br>5. Try to get the highest score possible before your last cookie and beat Cookie Monster! - Don't forget to eat cookie after every cookie you earn!</p>
             </section>
             <div class="image-container">
                 <img src="https://content.wfmynews2.com/photo/2016/11/01/Cookie%20Monster%20USAT_1478046170218_6692962_ver1.0.JPG" alt="Cookie Monster"/>
