--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             </section>
             <div class="image-container">
                 <img src="https://content.wfmynews2.com/photo/2016/11/01/Cookie%20Monster%20USAT_1478046170218_6692962_ver1.0.JPG" alt="Cookie Monster"/>
+                <button id="music">Play/Mute Music</button>
             </div>
             <section id="right-text">
                 <!-- Reset Button -->
