--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game: Hit the Buzzer and Win a Cookie</title>
     <link rel="stylesheet" href="css/style.css">
-    <script defer src="app.js"></script>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script defer src="jQueryApp.js"></script>
+
+    <!-- <script src="jQuery.js"></script> -->
+    <!-- <script defer src="app.js"></script> -->
+     
     <script src="https://kit.fontawesome.com/81f27cd803.js" crossorigin="anonymous"></script>
 </head>
 <body>
